[gd_scene load_steps=8 format=3 uid="uid://18u5uq2wbw68"]

[ext_resource type="PackedScene" uid="uid://c5iv5kwferjm3" path="res://Assets/Mines/basic_mine.tscn" id="1_5b5bg"]
[ext_resource type="Script" path="res://Assets/Mines/ExplosiveMine.gd" id="2_6pg4e"]
[ext_resource type="Texture2D" uid="uid://dmbrs3hwmqgcv" path="res://Assets/Mines/Full_Explosion.png" id="3_tw6o6"]

[sub_resource type="Animation" id="Animation_yi1yl"]
resource_name = "Explosion"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_ubsai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_txg3n"]
_data = {
"Explosion": SubResource("Animation_yi1yl"),
"RESET": SubResource("Animation_ubsai")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hii1s"]
radius = 182.011

[node name="ExplosiveMine" node_paths=PackedStringArray("ExplosionAnim", "ExplosionSprite", "ExplosionRadius") instance=ExtResource("1_5b5bg")]
script = ExtResource("2_6pg4e")
ExplosionAnim = NodePath("ExplosionAnimation")
ExplosionSprite = NodePath("ExplosionSprite")
ExplosionRadius = NodePath("ExplosionRadius")
dmg = 50.0

[node name="ExplosionSprite" type="Sprite2D" parent="." index="3"]
z_index = 1
scale = Vector2(5.5, 5.5)
texture = ExtResource("3_tw6o6")
hframes = 3

[node name="ExplosionAnimation" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_txg3n")
}

[node name="ExplosionRadius" type="Area2D" parent="." index="5"]
collision_layer = 16
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius" index="0"]
shape = SubResource("CircleShape2D_hii1s")

[connection signal="area_entered" from="ExplosionRadius" to="." method="_on_explosion_radius_area_entered"]
